# StudySimd

./: CMakeLists.txt
docs/: simd.md
src/: square.cpp
